<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="15dip"
    android:orientation="vertical" >

    <EditText
        android:id="@+id/mEditTermTransNo"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:hint="@string/hint_TermTransNo"
        android:inputType="number"
        android:singleLine="true"/>
    
    <EditText
        android:id="@+id/mEditBatch"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:hint="@string/hint_Batch"
        android:inputType="number"
        android:singleLine="true"/>
    
    <EditText
        android:id="@+id/mEditTransNo"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:hint="@string/hint_TransNo"
        android:inputType="number"
        android:singleLine="true"/>
    
    <EditText
        android:id="@+id/mEditMoney"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:hint="@string/hint_refund_money"
        android:inputType="number"
        android:singleLine="true" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center" >
        <Button
            android:id="@+id/btnRefund"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/btn_refund" />

        <Button
            android:id="@+id/btnCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="10dip"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/btn_cancel" />
    </LinearLayout>

</LinearLayout>