<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dip"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dip"
            android:gravity="center_horizontal"
            android:orientation="horizontal" >

            <EditText
                android:id="@+id/mEditUserNo"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:hint="@string/hint_operNo"
                android:inputType="number"
                android:maxLength="2"
                android:paddingLeft="30dip"
                android:singleLine="true"
                android:textColor="#909090" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dip"
            android:gravity="center_horizontal"
            android:orientation="horizontal" >

            <EditText
                android:id="@+id/mEditUserPwd"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:hint="@string/hint_operPwd"
                android:inputType="textPassword"
                android:maxLength="4"
                android:paddingLeft="30dip"
                android:singleLine="true"
                android:textColor="#909090" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="26dip"
            android:gravity="center" >

            <Button
                android:id="@+id/btnSign"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/btn_ok" />

            <Button
                android:id="@+id/btnCancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="10dip"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/btn_cancel" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>